module 3 essentials added

--- a/module-3/basics.ipynb
+++ b/module-3/basics.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>INC_NUMBER</th>\n",
-       "      <th>OCCURRED_ON</th>\n",
+       "      <th>Date</th>\n",
        "      <th>OCCURRED_TO</th>\n",
        "      <th>UCR_CRIME_CATEGORY</th>\n",
        "      <th>100_BLOCK_ADDR</th>\n",
@@ -170,7 +170,7 @@
        "</div>"
       ],
       "text/plain": [
-       "        INC_NUMBER        OCCURRED_ON        OCCURRED_TO   UCR_CRIME_CATEGORY  \\\n",
+       "        INC_NUMBER               Date        OCCURRED_TO   UCR_CRIME_CATEGORY  \\\n",
        "0  201600000052855  11/01/2015  00:00  01/09/2016  00:00  MOTOR VEHICLE THEFT   \n",
        "1  201600000594484  11/01/2015  00:00                NaN                 RAPE   \n",
        "2  201500002102327  11/01/2015  00:00  11/01/2015  09:00        LARCENY-THEFT   \n",
@@ -195,7 +195,7 @@
        "9   54XX W INDIAN SCHOOL RD  85031.0            APARTMENT  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +355,7 @@
        "[93 rows x 4 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,6 +363,10 @@
    "source": [
     "crimeByZip = crimes.groupby('ZIP')\n",
     "crimeByZip.UCR_CRIME_CATEGORY.describe()\n",
+    "# crimeByZip.head(10)\n",
+    "# crimeByZip.get_group('UCR_CRIME_CATEGORY')\n",
+    "# crimeByZip.UCR_CRIME_CATEGORY.value_counts()\n",
+    "# crimeByZip.to_csv('crimes_by_zip')\n",
     "# crimes[crimes.ZIP==85281].UCR_CRIME_CATEGORY.value_counts().plot.bar()"
    ]
   },
@@ -378,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +403,7 @@
        "Name: UCR_CRIME_CATEGORY, Length: 488, dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
